--- a/example.html
+++ b/example.html
@@ -37,7 +37,7 @@
       map.on('load', () => {
         map.addSource('trees', {
           'type': 'geojson',
-          'data': './trees.geojson'
+          'data': 'zipcodes.geojson'
         });
 
         map.addLayer(
