--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <ul id="gathered_info"></ul>
   </div>-->
     <div>
-      <div id="map"></div>
+      <div id="mapView"></div>
       
     </div>
     </div>
@@ -115,7 +115,7 @@
 
 
 let map = new mapboxgl.Map({
-container: 'map',
+container: 'mapView',
 style: 'mapbox://styles/mapbox/streets-v11',
 center: [-72.7, 41.6],
 zoom: 8
