overflow scroll on sidebar.

--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
       overflow-y: auto
     }
 
+    .explainer-content {
+      max-height: 70vh;
+      /* or any height you want */
+      overflow-y: auto
+    }
+
   </style>
 </head>
 
@@ -210,7 +216,7 @@
                   <v-expansion-panel-header>
                     What Am I Looking At?
                   </v-expansion-panel-header>
-                  <v-expansion-panel-content>
+                  <v-expansion-panel-content class="explainer-content">
                   <h4> CT NSF Grants</h4>
                   <p>While federal, state, and corporate research grants support researchers at an institution, 
                     they also play an important role in supporting local economies in a manner that sometimes can get overlooked. </p>
