--- a/index.html
+++ b/index.html
@@ -214,13 +214,13 @@
 
                 <v-expansion-panel :key="1">
                   <v-expansion-panel-header>
-                    What Am I Looking At?
+                    What am I looking at?
                   </v-expansion-panel-header>
                   <v-expansion-panel-content class="explainer-content">
                   <h4> CT NSF Grants</h4>
                   <p>While federal, state, and corporate research grants support researchers at an institution, 
                     they also play an important role in supporting local economies in a manner that sometimes can get overlooked. </p>
-                    <p>Here we are showing a visualization of all NSF grants obtained by businesses and higher education institutions within the State of Connecticut between the 2017 and 2022 fiscal years distributed by municipality. 
+                    <p>Here we are showing a visualization of all NSF grants obtained by businesses and higher education institutions within the State of Connecticut between the 2011 and 2022 fiscal years distributed by municipality. 
                     Circle sizes are proportional to the dollar value of grants obtained. 
                     Feel free to explore the visualization by adjusting filters or just panning and zooming on the map. 
                     If you have questions feel free to reach out to us!
