--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
         </v-app-bar> -->
 
         <v-container fluid>
-          <v-row>
-            <v-col cols="3">
+          <v-row class="d-block d-md-flex">
+            <v-col cols="12"  md="3">
 
               <v-expansion-panels multiple accordion :value="panel">
                 <v-expansion-panel :key="0">
@@ -170,7 +170,7 @@
 
 
             </v-col>
-            <v-col cols="9">
+            <v-col cols="12" md="9">
 
               <div id="mapView"></div>
               <!-- <v-btn
