bold total and reverse chronological order

--- a/index.html
+++ b/index.html
@@ -250,73 +250,70 @@
               <tbody>
                 <tr>
 
-                  <td>Total</td>
-                  <td>{{activeInst.total_award  | toUSD }}</td>
-                  <td>{{activeInst.total_jobs }}</td>                
+                  <td><strong>Total</strong></td>
+                  <td><strong>{{activeInst.total_award  | toUSD }}</strong></td>
+                  <td><strong>{{activeInst.total_jobs }}</strong></td>                
 
-                </tr>
-
-                <tr>
-                    <td>2011</td>
-                    <td>{{activeInst.Award_Amount_2011 | toUSD}}</td>
-                    <td>{{activeInst.jobs_2011 }}</td>  
-                </tr>
-
-                <tr>
-                    <td>2012</td>
-                    <td>{{activeInst.Award_Amount_2012 | toUSD}}</td>
-                    <td>{{activeInst.jobs_2012 }}</td>  
-                </tr>
-                <tr>
-                    <td>2013</td>
-                    <td>{{activeInst.Award_Amount_2013 | toUSD}}</td>
-                    <td>{{activeInst.jobs_2013 }}</td>  
-                </tr>
-                <tr>
-                    <td>2014</td>
-                    <td>{{activeInst.Award_Amount_2014 | toUSD}}</td>
-                    <td>{{activeInst.jobs_2014 }}</td>  
-                </tr>
-                <tr>
-                    <td>2015</td>
-                    <td>{{activeInst.Award_Amount_2015 | toUSD}}</td>
-                    <td>{{activeInst.jobs_2015 }}</td>  
-                </tr>
-                <tr>
-                    <td>2016</td>
-                    <td>{{activeInst.Award_Amount_2016 | toUSD}}</td>
-                    <td>{{activeInst.jobs_2016 }}</td>  
-                </tr>
-                <tr>
-                    <td>2017</td>
-                    <td>{{activeInst.Award_Amount_2017 | toUSD}}</td>
-                    <td>{{activeInst.jobs_2017 }}</td>  
-                </tr>
-                
-                <tr>
-                    <td>2018</td>
-                    <td>{{activeInst.Award_Amount_2018 | toUSD}}</td>
-                    <td>{{activeInst.jobs_2018 }}</td>  
-                </tr>
-                <tr>
-                    <td>2019</td>
-                    <td>{{activeInst.Award_Amount_2019 | toUSD}}</td>
-                    <td>{{activeInst.jobs_2019 }}</td>  
-                </tr>
-                <tr>
-                    <td>2020</td>
-                    <td>{{activeInst.Award_Amount_2020 | toUSD}}</td>
-                    <td>{{activeInst.jobs_2020 }}</td>  
-                </tr>
-                <tr>
-                    <td>2021</td>
-                    <td>{{activeInst.Award_Amount_2021 | toUSD}}</td>
-                    <td>{{activeInst.jobs_2021 }}</td>  
                 </tr>
                 <tr>
                     <td>2022</td>
                     <td>{{activeInst.Award_Amount_2022 | toUSD}}</td>
                     <td>{{activeInst.jobs_2022 }}</td>  
+                </tr>
+                <tr>
+                  <td>2021</td>
+                  <td>{{activeInst.Award_Amount_2021 | toUSD}}</td>
+                  <td>{{activeInst.jobs_2021 }}</td>  
+                </tr>
+                <tr>
+                  <td>2020</td>
+                  <td>{{activeInst.Award_Amount_2020 | toUSD}}</td>
+                  <td>{{activeInst.jobs_2020 }}</td>  
+                </tr>
+                <tr>
+                  <td>2019</td>
+                  <td>{{activeInst.Award_Amount_2019 | toUSD}}</td>
+                  <td>{{activeInst.jobs_2019 }}</td>  
+                </tr>
+                <tr>
+                  <td>2018</td>
+                  <td>{{activeInst.Award_Amount_2018 | toUSD}}</td>
+                  <td>{{activeInst.jobs_2018 }}</td>  
+                </tr>
+                <tr>
+                  <td>2017</td>
+                  <td>{{activeInst.Award_Amount_2017 | toUSD}}</td>
+                  <td>{{activeInst.jobs_2017 }}</td>  
+                </tr>
+                <tr>
+                  <td>2016</td>
+                  <td>{{activeInst.Award_Amount_2016 | toUSD}}</td>
+                  <td>{{activeInst.jobs_2016 }}</td>  
+                </tr>
+                <tr>
+                  <td>2015</td>
+                  <td>{{activeInst.Award_Amount_2015 | toUSD}}</td>
+                  <td>{{activeInst.jobs_2015 }}</td>  
+                </tr>
+                <tr>
+                  <td>2014</td>
+                  <td>{{activeInst.Award_Amount_2014 | toUSD}}</td>
+                  <td>{{activeInst.jobs_2014 }}</td>  
+                </tr>
+                <tr>
+                  <td>2013</td>
+                  <td>{{activeInst.Award_Amount_2013 | toUSD}}</td>
+                  <td>{{activeInst.jobs_2013 }}</td>  
+                </tr>
+                <tr>
+                  <td>2012</td>
+                  <td>{{activeInst.Award_Amount_2012 | toUSD}}</td>
+                  <td>{{activeInst.jobs_2012 }}</td>  
+                </tr>
+                <tr>
+                  <td>2011</td>
+                  <td>{{activeInst.Award_Amount_2011 | toUSD}}</td>
+                  <td>{{activeInst.jobs_2011 }}</td>  
                 </tr>
 
               </tbody>
